--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -20,7 +20,7 @@
 		</nav>
 
 			<footer>
-			<p>Copyright &copy; Lasse Street Jarlstrøm DAT12V KEA &trade; 2013</p>
+			<p>Copyright &copy; Lasse Street Jarlstrøm DAT12V <a href=http://www.kea.dk/da/uddannelser/erhvervsakademiuddannelser/datamatiker/ style="color:blue">KEA</a> &trade; 2013</p>
 			</footer>		
 		</div>
 	</body>
